--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,17 +7,16 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/sawbo_adama_logo"
-        android:id="@+id/imageView3"
-        android:layout_alignParentBottom="true"
+        android:src="@drawable/newsawbologo"
+        android:id="@+id/imageView2"
+        android:layout_above="@+id/imageView3"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="77dp" />
+        android:layout_below="@+id/imageView" />
 
-    <!-- typical width is 100dp, typical height is 40dp -->
     <Button
         android:layout_width="175dp"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:text="@string/donate_str"
         android:textColor="#FFFFFF"
         android:id="@+id/donate_btn"
