--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,6 @@
         android:layout_height="wrap_content"
         android:src="@drawable/newsawbologo"
         android:id="@+id/imageView2"
-        android:layout_above="@+id/imageView3"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/imageView" />
@@ -23,7 +22,7 @@
         android:layout_marginBottom="39dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/donatebtn" />
+        android:background="#189c50" />
 
 
 </RelativeLayout>
