--- a/app/src/main/res/layout/dialog_downloads.xml
+++ b/app/src/main/res/layout/dialog_downloads.xml
@@ -15,6 +15,16 @@
         android:text="@string/sharebluetooth_str"
         android:id="@+id/sharenormal_btn"/>
 
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:text="or"
+        android:id="@+id/textView" />
+
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
